syntax = "proto3";

package chat_v1;

import "google/protobuf/empty.proto";
import "google/protobuf/timestamp.proto";

option go_package = "chat-server/pkg/chat_v1;chat_v1";

service ChatV1 {
  rpc CreateChat(CreateChatRequest) returns (CreateChatResponse);
  rpc DeleteChat(DeleteChatRequest) returns (google.protobuf.Empty);
  rpc SendMessage(SendMessageRequest) returns (google.protobuf.Empty);
}

message CreateChatRequest {
  repeated int64 user_ids = 1;
  string title_chat = 2;
}

message CreateChatResponse {
  int64 id = 1;
}

message DeleteChatRequest {
  int64 id = 1;
}

message Message {
  int64 from = 1;
  int64 chat_id = 2;
  string text = 3;
  google.protobuf.Timestamp timestamp = 4;
}

message SendMessageRequest {
  Message message  = 1;
}
